# EC2-python-automation

./: LICENSE  README.md  pyproject.toml
.github/workflows/: CI-workflow.yml
src/: main.py
src/module_1/: __init__.py  additions.py
src/module_2/: __init__.py
src/module_3/: __init__.py  multiplications.py
src/server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
static/: index.html
test/unit/: test_module_1.py  test_module_2.py  test_module_3.py
